examples/default-ingress/2_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-demo-ingress
  labels:
    cudn-network: ingress
    k8s.ovn.org/primary-user-defined-network: ""
