examples/default-ingress/4_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: net-demo-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
        role: frontend
      annotations:
        k8s.ovn.org/open-default-ports: |
          - protocol: tcp
            port: 8080
    spec:
      containers:
        - name: hello
          image: openshift/hello-openshift
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: net-demo-ingress
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  namespace: net-demo-ingress
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
  tls: 
    termination: edge
